# nginx-ldap-auth-service

./: .autoenv.leave  .bumpversion.cfg  .dockerignore  .gitignore  .readthedocs.yaml  .semgrepignore  Dockerfile  LICENSE.txt  MANIFEST.in  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.dev.txt  requirements.txt  setup.cfg  setup.py
.aidex/: index.db
.cursor/rules/: AiDex.mdc  documentation.mdc  python-coding-standards.mdc  python-testing.mdc
doc/: requirements.txt
doc/source/: changelog.rst  conf.py  configuration.rst  contributing.rst  index.rst  installation.rst  monitoring.rst  nginx.rst  running.rst
doc/source/api/: ldap.rst  middleware.rst  models.rst  session.rst  settings.rst  views.rst
doc/source/overview/: features.rst  main.rst
doc/source/runbook/: contributing.rst  main.rst
etc/: environment.txt
etc/nginx/: nginx.conf
etc/nginx/certs/: localhost.crt  localhost.key
nginx_ldap_auth/: __init__.py  exc.py  gunicorn_config.py  ldap.py  logging.py  main.py  server.py  settings.py  types.py  typing.py  validators.py
nginx_ldap_auth/app/: forms.py  main.py  middleware.py  models.py
nginx_ldap_auth/app/templates/: login.html
nginx_ldap_auth/cli/: __init__.py  cli.py  server.py
test/: conftest.py  test_auth_flow.py  test_check_middleware.py  test_cli.py  test_duo_flow.py  test_headers.py  test_ldap.py  test_settings_status.py  test_settings_validators.py  test_validators.py
